[gd_scene load_steps=10 format=3 uid="uid://clmdal87xuoqj"]

[ext_resource type="Script" path="res://scripts/sceneEndingHandler.gd" id="1_2rkcx"]
[ext_resource type="Texture2D" uid="uid://c2rneix50d5as" path="res://assets/scenes/menus/winning_screen.png" id="2_t1yma"]
[ext_resource type="Texture2D" uid="uid://pf8a6qds4nq0" path="res://assets/scenes/menus/game_over_final_exam.png" id="3_b57jb"]
[ext_resource type="Texture2D" uid="uid://dkw2iaywngikn" path="res://assets/sprites/ui/return_button_sprite.png" id="4_2htkg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14y3r"]

[sub_resource type="Animation" id="Animation_bickk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CongratulationPlayer/creditText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CongratulationPlayer/colorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CongratulationPlayer/yourScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CongratulationPlayer/playerScore:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ye7vk"]
resource_name = "congratulation"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CongratulationPlayer/colorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.768627)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CongratulationPlayer/creditText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CongratulationPlayer/yourScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CongratulationPlayer/playerScore:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdwan"]
_data = {
"RESET": SubResource("Animation_bickk"),
"congratulation": SubResource("Animation_ye7vk")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b776j"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_2rkcx")

[node name="GameWin" type="Sprite2D" parent="."]
position = Vector2(576, 324.5)
scale = Vector2(1.12109, 0.631836)
texture = ExtResource("2_t1yma")

[node name="trophyButton" type="Button" parent="GameWin"]
offset_left = -187.0
offset_top = -165.0
offset_right = 241.0
offset_bottom = 515.0

[node name="GameOverStudy" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_b57jb")

[node name="gameoverButton" type="Button" parent="GameOverStudy"]
offset_left = -142.0
offset_top = 175.0
offset_right = 148.0
offset_bottom = 462.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_14y3r")

[node name="CongratulationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdwan")
}

[node name="colorRect" type="ColorRect" parent="CongratulationPlayer"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="creditText" type="Label" parent="CongratulationPlayer"]
offset_left = 71.0
offset_top = 139.0
offset_right = 1091.0
offset_bottom = 382.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "Congratulation! You have mastered the art of management in stress!

This project couldn't have been done without the opportunity given
 by my lecturer: Dr Marina Ng Kher Hui

Thank you so much for playing my game!"
horizontal_alignment = 1

[node name="yourScore" type="Label" parent="CongratulationPlayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 330.0
offset_top = 461.0
offset_right = 830.0
offset_bottom = 506.0
theme_override_font_sizes/font_size = 26
text = "Your Final Score: "
horizontal_alignment = 1

[node name="playerScore" type="Label" parent="CongratulationPlayer"]
offset_left = 696.0
offset_top = 438.0
offset_right = 789.0
offset_bottom = 514.0
theme_override_font_sizes/font_size = 55

[node name="winButton" type="Sprite2D" parent="."]
position = Vector2(1053, 559)
scale = Vector2(1.47778, 1.44444)
texture = ExtResource("4_2htkg")

[node name="gamewinButton" type="Button" parent="winButton"]
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_b776j")

[connection signal="pressed" from="GameWin/trophyButton" to="." method="_on_trophy_button_pressed"]
[connection signal="pressed" from="GameOverStudy/gameoverButton" to="." method="_on_gameover_from_study_button_pressed"]
[connection signal="animation_finished" from="CongratulationPlayer" to="." method="_on_congratulation_player_animation_finished"]
[connection signal="pressed" from="winButton/gamewinButton" to="." method="_on_gamewin_button_pressed"]
